services/media/jellyfin/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyfin
  namespace: media
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyfin
  healthCheck:
    active:
      type: HTTP
      interval: 10s
      timeout: 2s
      unhealthyThreshold: 3
      healthyThreshold: 1
      http:
        path: /health
        expectedStatuses:
          - 200
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 100
            unit: Second
