services/media/jellyfin/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/description: Servidor multimedia
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/href: https://jellyfin.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - jellyfin.bonchan.org
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
